// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <SearchInput /> should match normal SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchInput
    id="1"
    name="test"
    type="normal"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Icon
        ariaLabel={null}
        buttonClassName=""
        className="cui-search-input__icon"
        color=""
        description=""
        isAria={true}
        name="search_20"
        onClick={null}
        size={null}
        title=""
        type=""
      />,
      "className": "cui-search-input",
      "clear": false,
      "clearAriaLabel": null,
      "defaultValue": "",
      "disabled": false,
      "errorArr": Array [],
      "htmlId": null,
      "iconNode": null,
      "id": "1",
      "inputClassName": "",
      "inputHelpText": "",
      "inputRef": null,
      "inputSize": "",
      "label": "",
      "name": "test",
      "nestedLevel": 0,
      "onChange": null,
      "onDoneEditing": null,
      "onFocus": null,
      "onKeyDown": null,
      "onMouseDown": null,
      "placeholder": "",
      "readOnly": false,
      "secondaryLabel": "",
      "theme": "",
      "type": "text",
      "value": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaLabel": null,
        "buttonClassName": "",
        "className": "cui-search-input__icon",
        "color": "",
        "description": "",
        "isAria": true,
        "name": "search_20",
        "onClick": null,
        "size": null,
        "title": "",
        "type": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Icon
          ariaLabel={null}
          buttonClassName=""
          className="cui-search-input__icon"
          color=""
          description=""
          isAria={true}
          name="search_20"
          onClick={null}
          size={null}
          title=""
          type=""
        />,
        "className": "cui-search-input",
        "clear": false,
        "clearAriaLabel": null,
        "defaultValue": "",
        "disabled": false,
        "errorArr": Array [],
        "htmlId": null,
        "iconNode": null,
        "id": "1",
        "inputClassName": "",
        "inputHelpText": "",
        "inputRef": null,
        "inputSize": "",
        "label": "",
        "name": "test",
        "nestedLevel": 0,
        "onChange": null,
        "onDoneEditing": null,
        "onFocus": null,
        "onKeyDown": null,
        "onMouseDown": null,
        "placeholder": "",
        "readOnly": false,
        "secondaryLabel": "",
        "theme": "",
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "ariaLabel": null,
          "buttonClassName": "",
          "className": "cui-search-input__icon",
          "color": "",
          "description": "",
          "isAria": true,
          "name": "search_20",
          "onClick": null,
          "size": null,
          "title": "",
          "type": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`tests for <SearchInput /> should match pill SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchInput
    id="1"
    name="test"
    type="pill"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Icon
        ariaLabel={null}
        buttonClassName=""
        className="cui-search-input__icon"
        color=""
        description=""
        isAria={true}
        name="search_16"
        onClick={null}
        size={null}
        title=""
        type=""
      />,
      "className": "cui-search-input cui-search-input--pill",
      "clear": false,
      "clearAriaLabel": null,
      "defaultValue": "",
      "disabled": false,
      "errorArr": Array [],
      "htmlId": null,
      "iconNode": null,
      "id": "1",
      "inputClassName": "",
      "inputHelpText": "",
      "inputRef": null,
      "inputSize": "",
      "label": "",
      "name": "test",
      "nestedLevel": 0,
      "onChange": null,
      "onDoneEditing": null,
      "onFocus": null,
      "onKeyDown": null,
      "onMouseDown": null,
      "placeholder": "",
      "readOnly": false,
      "secondaryLabel": "",
      "theme": "",
      "type": "text",
      "value": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaLabel": null,
        "buttonClassName": "",
        "className": "cui-search-input__icon",
        "color": "",
        "description": "",
        "isAria": true,
        "name": "search_16",
        "onClick": null,
        "size": null,
        "title": "",
        "type": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Icon
          ariaLabel={null}
          buttonClassName=""
          className="cui-search-input__icon"
          color=""
          description=""
          isAria={true}
          name="search_16"
          onClick={null}
          size={null}
          title=""
          type=""
        />,
        "className": "cui-search-input cui-search-input--pill",
        "clear": false,
        "clearAriaLabel": null,
        "defaultValue": "",
        "disabled": false,
        "errorArr": Array [],
        "htmlId": null,
        "iconNode": null,
        "id": "1",
        "inputClassName": "",
        "inputHelpText": "",
        "inputRef": null,
        "inputSize": "",
        "label": "",
        "name": "test",
        "nestedLevel": 0,
        "onChange": null,
        "onDoneEditing": null,
        "onFocus": null,
        "onKeyDown": null,
        "onMouseDown": null,
        "placeholder": "",
        "readOnly": false,
        "secondaryLabel": "",
        "theme": "",
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "ariaLabel": null,
          "buttonClassName": "",
          "className": "cui-search-input__icon",
          "color": "",
          "description": "",
          "isAria": true,
          "name": "search_16",
          "onClick": null,
          "size": null,
          "title": "",
          "type": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
